# OpenFlow

./: .gitignore  LICENSE  OpenFlow.sln  README.md  pyproject.toml
.github/workflows/: ci.yml  release-bundle.yml
docs/: bench-bringup-v1c-to-v5.md  v1b-bench-validation.md
docs/superpowers/plans/: 2026-05-21-openflow-v1.md  2026-05-22-openflow-v1a-supplement.md  2026-05-22-openflow-v1a.md  2026-05-22-openflow-v2.md  2026-05-22-openflow-v3.md  2026-05-22-openflow-v4.md  2026-05-22-openflow-v5.md
docs/superpowers/specs/: 2026-05-21-openflow-v1-design.md  2026-05-22-openflow-v1-design.md  2026-05-22-openflow-v2-design.md  2026-05-22-openflow-v3-design.md  2026-05-22-openflow-v4-design.md  2026-05-22-openflow-v5-design.md
openflow/: __init__.py  config.py  errors.py  fixtures.py  plugin.py  results.py
openflow/bench/: __init__.py  cli.py  reservation.py
openflow/dashboard/: __init__.py  cli.py  server.py
openflow/dut/: base.py  ft2232h.py  u300.py
openflow/instruments/: base.py  cmw100.py  cmw100_a.py  cmw100_g.py  cmw100_lte.py  dmm_keysight.py  sa_base.py  sa_keysight_n9020b.py  sa_rs_fsw.py  scpi.py  sg_rs_smw200a.py  stubs.py  wfg_keysight_33500b.py
openflow/migrate/: cli.py  patterns.md  pipeline.py  transformers.py
openflow/parallel/: __init__.py  coordinator.py
openflow/report/: __init__.py  cli.py  html.py
openflow/report/db/: __init__.py  postgres_backend.py  schema.py  sqlite_backend.py
openflow/rfengine/: __init__.py  base.py  calibration_file.py  deembedding.py  evt_base.py  testconditions_limits.py
scripts/: make-offline-bundle.sh
src/OpenFlow.Cli/: OpenFlow.Cli.csproj  Program.cs
src/OpenFlow.Core/: AssemblyInfo.cs  ExitCodes.cs  JsonResultListener.cs  OpenFlow.Core.csproj  PlanRunner.cs  PluginLoader.cs  RunOptions.cs  RunResult.cs  Verdict.cs
tests/: conftest.py  test_u300b0_rfeb_evt_tx_evm_power_sweep.py  test_u300b0_rfeb_evt_tx_evm_power_sweep_smoke.py
tests-internal/: conftest.py  test_bench_cli.py  test_bench_reservation.py  test_cmw100_a_mixin.py  test_cmw100_facade.py  test_cmw100_g_mixin.py  test_cmw100_lte_mixin.py  test_config_loader.py  test_config_models.py  test_dashboard.py  test_dmm_keysight.py  test_dut_base.py  test_dut_ft2232h.py  test_dut_u300.py  test_errors.py  test_fixtures_resolve.py  test_instrument_base.py  test_instrument_stubs.py  test_migrate_add_logging_header.py  test_migrate_convert_class_to_test_function.py  test_migrate_convert_input_properties.py  test_migrate_convert_instrument_properties.py  test_migrate_convert_log_calls.py  test_migrate_convert_publish_result.py  test_migrate_convert_verdict_calls.py  test_migrate_extract_testcase_id.py  test_migrate_pipeline.py  test_migrate_rewrite_board_serials.py  test_migrate_rewrite_class_dunder_name.py  test_migrate_rewrite_config_names.py  test_migrate_rewrite_evt_helper_calls.py  test_migrate_rewrite_import_paths.py  test_migrate_rewrite_input_attrs.py  test_migrate_rewrite_output_publish.py  test_migrate_rewrite_print_summary.py  test_migrate_rewrite_sweep_loops.py  test_migrate_strip_attribute_decorators.py  test_migrate_strip_bare_except.py  test_migrate_strip_lifecycle_stubs.py  test_migrate_strip_opentap_imports.py  (+18 more)
tests-internal/fixtures/: sample_opentap_rx_gain.py  sample_opentap_tx_evm.py  sample_report.json
tests/Fixtures.TestSteps/: FailStep.cs  Fixtures.TestSteps.csproj  PassStep.cs  ThrowStep.cs
tests/Fixtures.TestSteps/plans/: fail.TapPlan  pass.TapPlan  throw.TapPlan
tests/OpenFlow.Core.Tests/: ExitCodesTests.cs  JsonResultListenerTests.cs  OpenFlow.Core.Tests.csproj  PlanRunnerErrorTests.cs  PlanRunnerTests.cs  PluginLoaderTests.cs  RunResultTests.cs  TestPaths.cs
tests/bench_bringup/: README.md  test_01_cmw100_connectivity.py  test_02_cmw100_nr_diagnostics.py  test_03_cmw100_tx_evm_smoke.py  test_03b_cmw100_lte_tx_evm_smoke.py  test_03c_cmw100_lte_diagnostics.py  test_03d_cmw100_lte_diagnostics_v2.py  test_04_dmm_connectivity.py  test_05_sg_connectivity.py  test_06_sa_connectivity.py  test_07_wfg_connectivity.py
tests/configs/: u300b0_evt.yaml  u300b0_evt_lte.yaml  u300b0_evt_nr.yaml
