[project]
name = "openflow"
version = "0.1.0a1"
description = "Bare-metal Python test framework for RF/baseband HW automation"
authors = [{ name = "Huifu Ma", email = "mayhuifu@gmail.com" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.0",
    "pydantic>=2.5",
    "pyyaml>=6.0",
    "rich>=13.7",
    "libcst>=1.1",
    "numpy>=1.26",
    "pandas>=2.0",
    # R&S Python SDK for CMW100 control (replaces raw PyVISA SCPI).
    # Required at runtime by openflow.instruments.cmw100_a / cmw100_g.
    # Note: PyPI distribution name for the Base package is hyphenated ("rscmw-base"),
    # while it still imports as `from RsCmwBase import *` in code.
    "rscmw-base>=4.0",
    "RsCmwGprfGen>=4.0",
    "RsCmwGprfMeas>=4.0",
    "RsCmwLteSig>=4.0",
    "RsCmwLteMeas>=4.0",
    "RsCmwNrFr1Meas>=3.8",
]

[project.scripts]
openflow = "openflow.migrate.cli:main"

[project.entry-points.pytest11]
openflow = "openflow.plugin"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML",
    "pandas-stubs",
]

[tool.hatch.build.targets.wheel]
packages = ["openflow"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["libcst.*", "RsCmw*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests-internal", "tests"]
addopts = "-ra --strict-markers"
markers = [
    "testcase(id): mark a test with its testcase ID (e.g. U300B0-RFE-EVT-005)",
]
